--- a/responsivo.css
+++ b/responsivo.css
@@ -137,7 +137,7 @@
     padding: 0 4%;
   }
   .section-four .baixe {
-    margin-top: 20px;
+    margin: auto;
   }
   .section-four .requisitos {
     font-size: 18px;
